--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 .container {
   display: flex;
@@ -119,7 +121,7 @@ form button:hover {
   color: white;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--tomato);
 }
 
 /* succes alert */
@@ -146,19 +148,21 @@ form button:hover {
   color: var(--white);
 }
 
-.attribution a {
-  color: var(--tomato);
-}
-
 @media only screen and (max-width: 600px) {
   body {
     background-color: white;
+    margin: 0;
+    padding: 0;
+    height: 100dvh;
   }
   .container {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
     width: 300px;
+    height: auto;
+    background-color: white;
+    padding: 0;
   }
 
   form {
@@ -170,7 +174,7 @@ form button:hover {
   }
   .img-container .mobile-img {
     display: block;
-    width: 350px;
+    /* width: 350px; */
   }
 
   .alert-container {
@@ -180,5 +184,8 @@ form button:hover {
 
   .alert-container button {
     margin-top: 100px;
+  }
+  .attribution {
+    display: none;
   }
 }
